--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,26 @@ body {
       left: 0;
       top: 0;
     }
+
+  #authSection {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#registroForm {
+    margin-top: 10px;
+}
+
+form {
+    margin: 10px 0;
+}
+
+form input {
+    margin: 5px;
+    padding: 8px;
+    width: 200px;
+}
+
   }
   
   
